| Bug #21536 | Partial start rolling back GCI can lead to subsequent failures during node resta | ||
|---|---|---|---|
| Submitted: | 9 Aug 2006 14:13 | Modified: | 6 Sep 2006 13:16 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 4.1, 5.0, 5.1 | OS: | |
| Assigned to: | Jonas Oreland | Target Version: | |
[9 Aug 2006 14:13]
Jonas Oreland
[9 Aug 2006 14:23]
Jonas Oreland
start 2 node cluster shutdown node 2 start node 2 -n error insert 10000 start node 2 wait for 2 to fail stop node 1 start node 2 --no-waitnodes=1 start node 1 --initial crash
[9 Aug 2006 16:25]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/10207 ChangeSet@1.2542, 2006-08-09 16:24:14+02:00, jonas@perch.ndb.mysql.com +3 -0 ndb - bug#21536 Make sure updateNodeInfo is run on master also for temporary tables
[31 Aug 2006 11:57]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/11154 ChangeSet@1.2041, 2006-08-31 11:56:45+02:00, jonas@perch.ndb.mysql.com +1 -0 ndb - bug#21536 Make sure updateNodeInfo is run on master also for temporary tables
[1 Sep 2006 10:06]
Jonas Oreland
pushed to 5.1.12
[1 Sep 2006 21:25]
Jonas Oreland
pushed to 5.0.25
[6 Sep 2006 9:10]
Jonas Oreland
pushed into 4.1.22
[6 Sep 2006 13:16]
Jon Stephens
Documented bugfix in 4.1.22/5.0.25/5.1.12 changelogs.
