ndb - bug#21536   Make sure updateNodeInfo is run on master also for temporary tables

ndb/src/kernel/blocks/dbdih/DbdihMain.cpp:
  Run update nodeinfo also here to handle
    temprorary tables in some situations
ndb/src/kernel/blocks/ndbcntr/NdbcntrMain.cpp:
  new error insert
ndb/test/ndbapi/testSystemRestart.cpp:
  test case